# Addfuck

./: CMakeLists.txt  LICENSE  README.md  main.cpp  op.h  reader.cpp  reader.h  vm.cpp  vm.h
.marscode/: deviceInfo.json
test/: buffer_test.txt  char_test.txt  example.txt  test_program.txt
